--- a/tasks/bootstrap.yml
+++ b/tasks/bootstrap.yml
@@ -10,7 +10,8 @@
 
   - name: Bootstrap cephadm
     vars:
-      mon_ip: "{{ hostvars[inventory_hostname]['ansible_'~cephadm_public_interface].ipv4.address }}"
+      #mon_ip: "{{ hostvars[ groups['mons'][0] ]['ansible_'~cephadm_public_interface].ipv4.address }}"
+      mon_ip: "10.6.1.12"
       monitoring_stack: "{{ '--skip-monitoring-stack' if not (cephadm_enable_monitoring | bool) else '' }}"
       dashboard: "{{ '--skip-dashboard' if not cephadm_enable_dashboard | bool else '' }}"
       firewalld: "{{ '--skip-firewalld' if not cephadm_enable_firewalld | bool else '' }}"
@@ -26,10 +27,12 @@
            --registry-url={{ cephadm_registry_url }}
            --registry-username={{ cephadm_registry_username }}
            --registry-password={{ cephadm_registry_password }}
-           {% endif %}
            --skip-pull
+           {% endif %}
            --fsid={{ cephadm_fsid }}
            --mon-ip={{ mon_ip }}
+           --allow-fqdn-hostname
+           --skip-mon-network
     become: true
     when: not cephadm_check_ceph_conf.stat.exists
 
