--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,8 +19,8 @@ cephadm_ssh_public_key: "/etc/ceph/cephadm.pub"
 cephadm_ssh_private_key: "/etc/ceph/cephadm.id"
 # Networking
 cephadm_public_interface: "{{ storage_net_interface }}"
-cephadm_cluster_interface: "{{ storage_mgmt_net_interface }}"
+cephadm_cluster_interface: "{{ storage_net_interface }}"
 cephadm_public_network: "{{ storage_net_cidr }}"
-cephadm_cluster_network: "{{ storage_mgmt_net_cidr }}"
+cephadm_cluster_network: "{{ storage_net_cidr }}"
 # OSDs
 cephadm_osd_devices: []
